--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">@color/material_teal_500</color>
+    <color name="colorPrimaryDark">@color/material_teal_700</color>
+    <color name="colorAccent">@color/material_orange_a400</color>
+
+
+    <color name="material_teal_500">#009688</color>
+    <color name="material_teal_700">#00796B</color>
+    <color name="material_orange_a400">#FF9100</color>
 </resources>
