Review and trailer added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="64dp"
+            android:layout_margin="@dimen/space_large"
             android:indeterminate="true"
             android:indeterminateTint="#ffe0e0e0"
             android:indeterminateTintMode="src_in" />
@@ -40,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="64dp"
+            android:layout_margin="@dimen/space_large"
             android:visibility="gone"
             app:srcCompat="@drawable/ic_cloud_off" />
 
@@ -61,9 +61,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginRight="@dimen/space_mini"
+            android:layout_marginBottom="@dimen/space_mini"
+            android:layout_marginLeft="@dimen/space_mini"
             app:menu_fab_size="normal"
             app:menu_showShadow="true"
             app:menu_shadowColor="#66000000"
@@ -72,10 +72,10 @@
             app:menu_shadowYOffset="3dp"
             app:menu_icon="@drawable/ic_sort"
             app:menu_buttonSpacing="0dp"
-            app:menu_labels_paddingTop="4dp"
-            app:menu_labels_paddingRight="8dp"
-            app:menu_labels_paddingBottom="4dp"
-            app:menu_labels_paddingLeft="8dp"
+            app:menu_labels_paddingTop="@dimen/space_micro"
+            app:menu_labels_paddingRight="@dimen/space_mini"
+            app:menu_labels_paddingBottom="@dimen/space_micro"
+            app:menu_labels_paddingLeft="@dimen/space_mini"
             app:fab_colorNormal="@color/colorAccent"
             app:menu_labels_textColor="#FFFFFF"
             app:menu_labels_textSize="14sp"
