--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="material_teal_500">#009688</color>
     <color name="material_teal_700">#00796B</color>
     <color name="material_orange_a400">#FF9100</color>
+    <color name="mid_gray">#33333333</color>
 </resources>
